--- a/1_HTML/stranica.html
+++ b/1_HTML/stranica.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moja prva stranica</title>
+    <link rel="stylesheet" href="stil.css">
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>Pozdrav svijetu</h1>
+    Krećem učiti i CSS
 </body>
 </html>
