--- a/1_HTML/stranica.html
+++ b/1_HTML/stranica.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stil.css">
 </head>
 <body>
-    <h1>Pozdrav svijetu</h1>
+    <h1>Ivica Šamu</h1>
     Krećem učiti i CSS
 </body>
 </html>
