Promjenjena stranica.html po uputama sa predavanja

--- a/1_HTML/stranica.html
+++ b/1_HTML/stranica.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Ivica Šamu</h1>
-    Krećem učiti i CSS
+    <h2>Edunova</h2>
+    <h3>Osijek</h3>
+    <h4>Frontend</h4>
 </body>
 </html>
