--- a/1_HTML/vjezba08/index.html
+++ b/1_HTML/vjezba08/index.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div id="snow"></div>
     <ul>
         <li>
             <a href="proizvodi/index.html">Moji proizvodi</a>
         </li>
+        <li>
+            <a href="usluge">Usluge</a>
+        </li>
     </ul>
+    <script src="js/snijeg.js"></script>
 </body>
 </html>
