--- a/1_HTML/vjezba08/proizvodi/vilicari/TKZ18.html
+++ b/1_HTML/vjezba08/proizvodi/vilicari/TKZ18.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body>
+
     <h1>Top viličar</h1>
 
     <ul>
         <li>
-            <a href="../index.html">Svi proizvodi</a>
+            <a href="../">Svi proizvodi</a>
         </li>
         <li>
             <a href="../../">Početna stranica</a>
         </li>
     </ul>
+    
 </body>
 </html>
