--- a/1_HTML/vjezba08/usluge/akcija.html
+++ b/1_HTML/vjezba08/usluge/akcija.html
@@ -7,18 +7,13 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <h1>Proizvodi</h1>
+    <h1>Usluge na akciji</h1>
+
     <ul>
         <li>
-            <!-- ../ je isto što i ../index.html -->
-            <a href="../">Početna</a>
-        </li>
-        <li>
-            <a href="vilicari/TKZ18.html">Top viličar</a>
+            <a href="./">Sve usluge</a>
         </li>
     </ul>
-
-    <img src="../img/Slika2.png" alt="Slika">
-
+    
 </body>
 </html>
