--- a/1_HTML/vjezba08/usluge/index.html
+++ b/1_HTML/vjezba08/usluge/index.html
@@ -7,18 +7,14 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <h1>Proizvodi</h1>
+    <h1>Usluge čšćđž ČŠĆĐŽ</h1>
     <ul>
         <li>
-            <!-- ../ je isto što i ../index.html -->
             <a href="../">Početna</a>
         </li>
         <li>
-            <a href="vilicari/TKZ18.html">Top viličar</a>
+            <a href="akcija.html">Usluge na akciji</a>
         </li>
     </ul>
-
-    <img src="../img/Slika2.png" alt="Slika">
-
 </body>
 </html>
