--- a/1_HTML/vjezba08/DZ/index.html
+++ b/1_HTML/vjezba08/DZ/index.html
@@ -11,12 +11,12 @@
         <div class="menu">
             <ul>
                 <li><a href="index.html"class="active">Početna</a></li>
-                <li><a href="">O nama</a></li>
-                <li><a href="">Usluge</a></li>
-                <li><a href="">Projekti</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Galerija</a></li>
-                <li><a href="">Kontakt</a></li>
+                <li><a href="onama/index.html">O nama</a></li>
+                <li><a href="usluge/index.html">Usluge</a></li>
+                <li><a href="projekti/index.html">Projekti</a></li>
+                <li><a href="blog/index.html">Blog</a></li>
+                <li><a href="galerija/index.html">Galerija</a></li>
+                <li><a href="kontakti/index.html">Kontakt</a></li>
             </ul>
         </div>
         <div class="content">
