RWD primjeri s media query

--- a/1_HTML/vjezba09/index.html
+++ b/1_HTML/vjezba09/index.html
@@ -35,5 +35,11 @@
 
         Pellentesque vel urna eget ex malesuada ultrices id interdum neque. Suspendisse ac arcu eu dolor pulvinar laoreet. Ut eu odio massa. Nam finibus finibus ligula vitae feugiat. Nulla facilisi. Nulla eget turpis in metus tempus feugiat. Nulla dictum neque ut molestie feugiat. Nam facilisis nisl vitae quam dignissim, in eleifend nunc ullamcorper. Morbi accumsan auctor faucibus. Vestibulum sed sagittis erat, quis varius nisi. Sed convallis nulla a nunc sagittis scelerisque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue lacus quis vivamus.</article>
     </section>
+    <div class="container">
+        <div class="k a">A</div>
+        <div class="k b">B</div>
+        <div class="k c">C</div>
+        <div class="k d">D</div>
+    </div>
 </body>
 </html>
