--- a/2_JS/vjezba04/zad/index.html
+++ b/2_JS/vjezba04/zad/index.html
@@ -25,6 +25,10 @@
               <option value="2">2. Ispiši manji broj između A, B i C</option>
               <option value="3">3. Zbroji sva četiri broja A, B, C i D</option>
               <option value="4">4. Punoljetnost (unos A)</option>
+              <option value="5">5. Da li je broj poz, neg ili nula (unos A)</option>
+              <option value="6">6. Da li je broj paran ili neparan (unos A)</option>
+              <option value="7">7. Ocijeni po broju bodova (unos A)</option>
+              <option value="8">8. Da li je broj A djeliv s B bez ostatka</option>
             </select>
           </label>
 
