Switch petlja i vježbanje

--- a/2_JS/vjezba04/zad/index.html
+++ b/2_JS/vjezba04/zad/index.html
@@ -29,6 +29,11 @@
               <option value="6">6. Da li je broj paran ili neparan (unos A)</option>
               <option value="7">7. Ocijeni po broju bodova (unos A)</option>
               <option value="8">8. Da li je broj A djeliv s B bez ostatka</option>
+              <option value="9">9. Zbroj većih brojeva (A i B) + (C i D)</option>
+              <option value="10">10. Za upisani broj u polju D ispiši 10 puta veći broj</option>
+              <option value="11">11. Za unesenom ime grada u polje B ispiši da li je sjedište Edunove ili ne</option>
+              <option value="12">12. Za upisane pojmove u polju A i B ispiši jedno pokraj drugoga</option>
+              <option value="13" selected="selected">13. Ispiši umnožak broja A i B</option>
             </select>
           </label>
 
