--- a/2_JS/vjezba05/zad/index.html
+++ b/2_JS/vjezba05/zad/index.html
@@ -24,14 +24,17 @@
               <option value="1">1. Naziv akcije</option>
               <option value="2">2. Položio/Ne položio</option>
               <option value="3">3. Ocjena prema bodovima</option>
-              <option selected="selected" value="4">4. Za upisani niz znakova ispiši koliko je znakova upisano</option>
+              <option value="4">4. Za upisani niz znakova ispiši koliko je znakova upisano</option>
+              <option value="5">5. Za upisani decimalni broj ispiši samo decimalni dio</option>
+              <option value="6">6. Za uneseni broj ispiši da li je broj para/neparan</option>
+              <option selected="selected" value="7">7. Za uneseno ime namjernice ispiši dali je voće</option>
             </select>
           </label>
 
          
         </div>
 
-        <div class="grid">
+        <div c®lass="grid">
           <label class="field">
             <span>A</span>
             <input id="a" type="text" />
