--- a/2_JS/vjezba05/zad/index.html
+++ b/2_JS/vjezba05/zad/index.html
@@ -27,7 +27,8 @@
               <option value="4">4. Za upisani niz znakova ispiši koliko je znakova upisano</option>
               <option value="5">5. Za upisani decimalni broj ispiši samo decimalni dio</option>
               <option value="6">6. Za uneseni broj ispiši da li je broj para/neparan</option>
-              <option selected="selected" value="7">7. Za uneseno ime namjernice ispiši dali je voće</option>
+              <option value="7">7. Za uneseno ime namjernice ispiši dali je voće</option>
+              <option selected="selected" value="8">8. Za unešeni broj ispiši sve brojeve od 1 do tog broja odvojeno zarezom</option>
             </select>
           </label>
 
