--- a/2_JS/vjezba07/zad/index.html
+++ b/2_JS/vjezba07/zad/index.html
@@ -34,7 +34,7 @@
               <option value="4">4. Za unesenu riječ u polje A provjerite da li je palindrom ili ne</option>
               <option value="5">5. Provjeri da li u nizu stopRijeci postoji riječ pronađena u polju B</option>
               <option value="6">6. Za unesenu riječ u polju A ispiši koliko ima samoglasnika i koliko suglasnika</option>
-              <option value="7">7. Ispiši sve brojeve odvojeno znakom tab (\t) između A i B ili B i A. </option>
+              <option value="7" selected="selected">7. Ispiši sve brojeve odvojeno znakom tab (\t) između A i B ili B i A. </option>
             </select>
           </label>
 
