--- a/2_JS/vjezba10/index.html
+++ b/2_JS/vjezba10/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rekurzija</title>
 </head>
 <body>
-    <div onclick="pozdraviSvijet()">
-        klikni me i pogledaj konzolu
-    </div>
     
+
     <script src="app.js"></script>
 </body>
 </html>
